# spotify-shows-openai

./: README.md  pyproject.toml
spotify_shows/: main.py  scraper.py  settings.py
